<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/itemBaixar"
        android:title="@string/baixe_aqui"
        android:visible="false"
        app:showAsAction="never"/>
    <item android:id="@+id/itemAddFav"
        android:title="@string/add_aos_favoritos"
        app:showAsAction="never"
        />
    <item android:id="@+id/itemAdPlaylist"
        android:title="@string/add_aos_playlist"
        app:showAsAction="never"
        />
    <item android:id="@+id/itemExcluir"
        android:title="@string/excluir"
        app:showAsAction="never"
        />
    <item android:id="@+id/itemDeleteDaPlaylist"
        android:title="@string/deletar_da_playlist"
        android:visible="false"
        app:showAsAction="never"/>
    <item android:id="@+id/itemEditar"
        android:title="@string/editar"
        app:showAsAction="never"
        android:visible="false"
        />
</menu>
