<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/llRoot"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:id="@+id/appBar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/tbMainMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/TheToobar"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llAdmob"
        android:orientation="vertical"/>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:fillViewport="true"
        android:id="@+id/svEnviar"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:text="Bug" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sugestao" />
            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/textInputLayout"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:id="@+id/edtComentario"
                    android:hint="@string/digite_seu_comentario" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/reportar_bug"
                android:background="?colorPrimary"
                android:id="@+id/btnEntrar"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="60dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
