<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llRoot"
    android:background="@color/windowBackground"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:title="Entrar"
            android:background="@color/colorPrimary"
            app:theme="@style/TheToobar"/>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ifkeys"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iptEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="13dp"
                        android:paddingTop="10dp"
                        android:hint="Matrícula"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/iptSenha"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/edtSenha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="13dp"
                            android:paddingTop="13dp"
                            android:hint="@string/senha"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:id="@+id/scMostrar"
                        android:checked="true"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/logar_action"
                            android:background="?colorPrimary"
                            android:id="@+id/btnEntrar"
                            android:textColor="@color/colorAccent"
                            android:layout_marginBottom="6dp"
                            />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/esquici_minha_senha"
                            android:id="@+id/btnEsquici"
                            android:background="@drawable/button_transparent"
                            android:shadowColor="@color/colorAccent"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/colorPrimary"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
